--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
             <artifactId>rxjava</artifactId>
             <version>2.1.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.4</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
